# solana-token-creator

./: .gitignore  DEPLOYMENT.md  README.md  SECURITY.md  app.js  config.example.js  config.js.example  index.html  package.json  requirements.txt
.github/workflows/: create-token.yml
rust-programs/: Cargo.toml
rust-programs/src/: main.rs
scripts/: create_token.py  generate_report.py
