[package]
name = "solana-token-operations"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-client = "1.17"
solana-sdk = "1.17"
spl-token = "4.0"
spl-associated-token-account = "2.2"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
base58 = "0.2"
log = "0.4"
env_logger = "0.10"

[[bin]]
name = "token-ops"
path = "src/main.rs"